@@ -15,6 +15,8 @@ layout(std140) uniform ballMatrixBlock {
 	mat4 matWorldViewProj[N_EYES];
 };
 
+uniform mat4 matProj[N_EYES]; // Separated from matrix block since we only need to set it once per frame (same for all balls)
+
 ////VERTEX
 layout(location=0) in vec3 vPosition;
 layout(location=1) in vec3 vNormal;
@@ -101,6 +103,8 @@ out vec4 normal_t0x;
 in vec4 worldPos_t0y_gs[];
 out vec4 worldPos_t0y;
 
+flat out float eye;
+
 void main()
 {
     gl_Layer = eye_gs[0];
@@ -109,6 +113,7 @@ void main()
         gl_ClipDistance[0] = gl_in[i].gl_ClipDistance[0];
         normal_t0x = normal_t0x_gs[i];
         worldPos_t0y = worldPos_t0y_gs[i];
+        eye = eye_gs[i];
         EmitVertex();
     }
     EndPrimitive();
@@ -212,6 +217,7 @@ float3 PFlightLoop(const float3 pos, const float3 N, const float3 diffuse)
 
 in vec4 normal_t0x;
 in vec4 worldPos_t0y;
+flat in float eye;
 
 void main()
 {
@@ -273,11 +279,9 @@ void main()
     const float3 playfield_p0 = mul_w1(float3(/*playfield_pos=*/0.,0.,invTableRes_playfield_height_reflection.z), matWorldView);
     const float t = dot(playfield_normal, worldPos_t0y.xyz - playfield_p0) / NdotR;
     const float3 playfield_hit = worldPos_t0y.xyz - t*r;
-    const float2 uv = (matWorldViewInverse * float4(playfield_hit, 1.0)).xy * invTableRes_playfield_height_reflection.xy;
+    //const float2 uv = (matWorldViewInverse * float4(playfield_hit, 1.0)).xy * invTableRes_playfield_height_reflection.xy;
 
-    // This will break with custom playfield texture coordinates (like Flupper's TOTAN and many others)
-    // => Rather use screen space sample from previous frame (it will include the lighting/shadowing but also the ball itself, and would need to account for viewer movement) ?
-    float3 playfieldColor = tex2D(tex_ball_playfield, uv).rgb * invTableRes_playfield_height_reflection.w;
+    float3 playfieldColor;
     BRANCH if (NdotR <= 0. || t < 0.)
     {
         // t < 0.0 may happen in some situation where ball intersects the playfield (like in kicker)
@@ -285,8 +289,18 @@ void main()
     }
     else
     {
+        // This will break with custom playfield texture coordinates (like Flupper's TOTAN and many others)
+        // => Rather use screen space sample from previous frame (it will include the lighting/shadowing but also the ball itself, and would need to account for viewer movement) ?
+        //playfieldColor = tex2D(tex_ball_playfield, uv).rgb * invTableRes_playfield_height_reflection.w;
+
         //!! hack to get some lighting on reflection sample, but only diffuse, the rest is not setup correctly anyhow
-        playfieldColor = PFlightLoop(playfield_hit, playfield_normal, playfieldColor);
+        //playfieldColor = PFlightLoop(playfield_hit, playfield_normal, playfieldColor);
+	
+		// New implementation: use previous frame as a reflection probe instead of computing a simplified render (this is faster and more accurate, support playfield mesh, lighting,... but there can be artefacts, with self reflection,...)
+		// TODO use previous frame projection instead of the one of the current frame to limit reflection distortion (still this is minimal)
+		float4 proj = matProj[int(eye)] * float4(playfield_hit, 1.0);
+		float2 uvp = float2(0.5, 0.5) + proj.xy * (0.5 / proj.w);
+		playfieldColor = saturate(tex2D(tex_ball_playfield, uvp).rgb) * invTableRes_playfield_height_reflection.w;
 
         //!! magic falloff & weight the rest in from the ballImage
         // Before 10.8, used to be: const float weight = NdotR*NdotR; 
